# rust_os

./: Cargo.toml
.cargo/: config.toml
src/: global_descriptor_table.rs  interrupts.rs  main.rs  vga_buffer.rs
