[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "*"
volatile = "*"
spin = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]